--- a/css/index.html
+++ b/css/index.html
@@ -266,7 +266,7 @@
         // Check the condition, for example, screen width
         if (window.innerWidth > 1000) {
             // Redirect to another page
-            window.location.href = 'index2.html';
+            window.location.href = '../index2.html';
         }
     }
 
