--- a/css/index.html
+++ b/css/index.html
@@ -131,7 +131,7 @@
 </section>
     <br><br>
     <canvas id="myChart" class="mychart"></canvas>
-    <script src="script.js"></script>
+    <script src="../js/script.js"></script>
 
 
     <br><br><br><br><br><br><br><br><br>
@@ -258,7 +258,7 @@
     <br><br><br><br><br><br><br><br><br><br>
 </section>
 </body>
-<script src="script.js"></script>
+<script src="../js/script.js"></script>
 
 <script>
     function redirectToPage() {
