--- a/css/index.html
+++ b/css/index.html
@@ -132,9 +132,17 @@
     <br><br>
     <canvas id="myChart" class="mychart"></canvas>
     <script src="../js/script.js"></script>
-
-
-    <br><br><br><br><br><br><br><br><br>
+    <br><br>
+    <section>
+        <div class="nav" id="navbar">
+            <a href="index.html"><span class="material-symbols-outlined" id="current">home</span></a>
+            <a href="#"> <span class="material-symbols-outlined">topic</span></a>
+            <a href="#"><span class="material-symbols-outlined">format_list_bulleted</span></a>
+            <a href="#"> <span class="material-symbols-outlined">person</span></a>
+            <a href="#"><span class="material-symbols-outlined">search</span></a>
+        </div>
+    </section>
+    <br><br><br><br><br><br><br>><br><br><br><br><br><br><br>
     <!-- Page 3 -->
 <section class="page-3">
     <article class="peers">
@@ -177,7 +185,6 @@
         <br>
         <div id="column">
             <h4>Gender:</h4>
-            <!-- <h5 class="gender">Male </h5> -->
             <div class="dropdown" id="myDropdown3">
                 <span class="dropbtn" onclick="toggleDropdown(this)"><span class="arrow-down"></span></span>
                 <!-- The dropdown content -->
